fix: correct grid, overflow and more

--- a/app/Page.module.css
+++ b/app/Page.module.css
@@ -6,5 +6,5 @@
 	gap: 3rem;
 	margin: 0 auto;
 	padding: 5rem 0;
-	overflow: overlay;
+	height: 100%;
 }
